tests/baselines/reference/unusedMultipleParameters2InFunctionDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts(2,18): error TS6133: Parameter 'person' has never been used.
tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts(2,51): error TS6133: Parameter 'person3' has never been used.
tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts(3,9): error TS6132: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts (3 errors) ====
    
    function greeter(person: string, person2: string, person3: string) {
                     ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person' has never been used.
                                                      ~~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person3' has never been used.
        var unused = 20;
            ~~~~~~
!!! error TS6132: Variable 'unused' has never been used.
        person2 = "dummy value";
    }